--- a/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
+++ b/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
@@ -42,7 +42,6 @@
   <ItemGroup>
     <Compile Include="AdvertiseOptions.cs" />
     <Compile Include="AdvertiseServiceOptions.cs" />
-    <Compile Include="CallBackInfo.cs" />
     <Compile Include="CallbackInterface.cs" />
     <Compile Include="CallbackQueue.cs" />
     <Compile Include="ConnectionManager.cs" />
@@ -60,6 +59,7 @@
     <Compile Include="Spinner.cs" />
     <Compile Include="SubscribeOptions.cs" />
     <Compile Include="Subscriber.cs" />
+    <Compile Include="SubscriberCallbacks.cs" />
     <Compile Include="Subscription.cs" />
     <Compile Include="this_node.cs" />
     <Compile Include="TopicManager.cs" />
