plugging and chugging

--- a/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
+++ b/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
@@ -44,24 +44,33 @@
     <Compile Include="AdvertiseServiceOptions.cs" />
     <Compile Include="CallbackInterface.cs" />
     <Compile Include="CallbackQueue.cs" />
+    <Compile Include="Connection.cs" />
     <Compile Include="ConnectionManager.cs" />
     <Compile Include="Header.cs" />
     <Compile Include="Links.cs" />
+    <Compile Include="Master.cs" />
     <Compile Include="names.cs" />
+    <Compile Include="network.cs" />
     <Compile Include="NodeHandle.cs" />
+    <Compile Include="Param.cs" />
     <Compile Include="PendingConnection.cs" />
     <Compile Include="PollManager.cs" />
+    <Compile Include="PollSet.cs" />
     <Compile Include="Publisher.cs" />
     <Compile Include="ServiceClient.cs" />
     <Compile Include="ServiceClientOptions.cs" />
     <Compile Include="ServiceManager.cs" />
     <Compile Include="ServiceServer.cs" />
+    <Compile Include="ServiceServerLink.cs" />
     <Compile Include="Spinner.cs" />
     <Compile Include="SubscribeOptions.cs" />
     <Compile Include="Subscriber.cs" />
     <Compile Include="SubscriberCallbacks.cs" />
     <Compile Include="Subscription.cs" />
+    <Compile Include="SubscriptionCallbackHelper.cs" />
+    <Compile Include="TcpTransport.cs" />
     <Compile Include="this_node.cs" />
+    <Compile Include="TopicInfo.cs" />
     <Compile Include="TopicManager.cs" />
     <Compile Include="XmlRpcManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
