--- a/ROS#/XmlRpc_Wrapper/XmlRpc_Wrapper.csproj
+++ b/ROS#/XmlRpc_Wrapper/XmlRpc_Wrapper.csproj
@@ -41,9 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AsyncXmlRpcConnection.cs" />
+    <Compile Include="SerializationHelper.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="XmlRpcClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XmlRpcDispatch.cs" />
+    <Compile Include="XmlRpcServer.cs" />
     <Compile Include="XmlRpcSource.cs" />
     <Compile Include="XmlRpcValue.cs" />
   </ItemGroup>
