ROS is like a clown car... The stuff to implement just keeps coming out, and coming out, and just like clowns, ROS scares small children, strengthening the analogy.

--- a/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
+++ b/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
@@ -48,7 +48,6 @@
     <Compile Include="Connection.cs" />
     <Compile Include="ConnectionManager.cs" />
     <Compile Include="Header.cs" />
-    <Compile Include="Links.cs" />
     <Compile Include="Master.cs" />
     <Compile Include="names.cs" />
     <Compile Include="network.cs" />
@@ -57,22 +56,30 @@
     <Compile Include="PendingConnection.cs" />
     <Compile Include="PollManager.cs" />
     <Compile Include="PollSet.cs" />
+    <Compile Include="Publication.cs" />
     <Compile Include="Publisher.cs" />
+    <Compile Include="PublisherLink.cs" />
     <Compile Include="ServiceClient.cs" />
     <Compile Include="ServiceClientOptions.cs" />
     <Compile Include="ServiceManager.cs" />
     <Compile Include="ServiceServer.cs" />
     <Compile Include="ServiceServerLink.cs" />
+    <Compile Include="SingleSubscriberPublisher.cs" />
     <Compile Include="Spinner.cs" />
     <Compile Include="SubscribeOptions.cs" />
     <Compile Include="Subscriber.cs" />
     <Compile Include="SubscriberCallbacks.cs" />
+    <Compile Include="SubscriberLink.cs" />
     <Compile Include="Subscription.cs" />
     <Compile Include="SubscriptionCallbackHelper.cs" />
+    <Compile Include="SubscriptionQueue.cs" />
     <Compile Include="TcpTransport.cs" />
     <Compile Include="this_node.cs" />
+    <Compile Include="TimerManager.cs" />
     <Compile Include="TopicInfo.cs" />
     <Compile Include="TopicManager.cs" />
+    <Compile Include="TransportPublisherLink.cs" />
+    <Compile Include="TransportSubscriberLink.cs" />
     <Compile Include="XmlRpcManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="_Init.cs" />
