--- a/ROS#/XmlRpc_Wrapper/XmlRpc_Wrapper.csproj
+++ b/ROS#/XmlRpc_Wrapper/XmlRpc_Wrapper.csproj
@@ -21,7 +21,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -49,7 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XmlRpcDispatch.cs" />
     <Compile Include="XmlRpcServer.cs" />
-    <Compile Include="XmlRpcServerMethod.cs" />
+    <Compile Include="XMLRPCCallWrapper.cs" />
     <Compile Include="XmlRpcSource.cs" />
     <Compile Include="XmlRpcValue.cs" />
   </ItemGroup>
