totally lost an hour or 2 of work in Subscriptions.cs to a random VS2010-related BSOD... I think it was the WD passport trying to uber-lock some of the files in the solution to back them up... either way... COMMIT!

--- a/ROS#/YAMLParser/YAMLParser.csproj
+++ b/ROS#/YAMLParser/YAMLParser.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MessageTypes.cs" />
     <Compile Include="TemplateProject\SerializationHelper.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
