--- a/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
+++ b/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
@@ -49,6 +49,8 @@
     <Compile Include="ConnectionManager.cs" />
     <Compile Include="Header.cs" />
     <Compile Include="Master.cs" />
+    <Compile Include="MessageDeserializer.cs" />
+    <Compile Include="MessageEvent.cs" />
     <Compile Include="names.cs" />
     <Compile Include="network.cs" />
     <Compile Include="NodeHandle.cs" />
