making mad xmlrpc headway... I GOT REPLIES FROM THE ROS_MASTER! ZOMG

--- a/ROS#/XmlRpcWin32/XmlRpcWin32.vcxproj
+++ b/ROS#/XmlRpcWin32/XmlRpcWin32.vcxproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="base64.h" />
+    <ClInclude Include="EricRulz.h" />
     <ClInclude Include="XmlRpc.h" />
     <ClInclude Include="XmlRpcClient.h" />
     <ClInclude Include="XmlRpcDispatch.h" />
