--- a/ROS#/XmlRpcWin32/XmlRpcWin32.vcxproj.filters
+++ b/ROS#/XmlRpcWin32/XmlRpcWin32.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="XmlRpcServerMethodWrapper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EricRulz.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
