--- a/ROS#/XmlRpc_Wrapper/XmlRpc_Wrapper.csproj
+++ b/ROS#/XmlRpc_Wrapper/XmlRpc_Wrapper.csproj
@@ -56,7 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="XmlRpcWin32.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
