Did some mad-hacking on keeping track of instances of stuff in C++ land in the C# wrappers... all kinds of reference counting, and finalizers, and IDisposable implementation, and stuff... works perfect for XmlRpcValue, but I'm having to mirror the changes for XmlRpcServer, XmlRpcClient, and XmlRpcDispatch (at least)

--- a/ROS#/XmlRpcWin32/XmlRpcWin32.vcxproj
+++ b/ROS#/XmlRpcWin32/XmlRpcWin32.vcxproj
@@ -55,6 +55,8 @@
       <PrecompiledHeaderOutputFile>
       </PrecompiledHeaderOutputFile>
       <ExceptionHandling>Async</ExceptionHandling>
+      <MinimalRebuild>false</MinimalRebuild>
+      <BufferSecurityCheck>false</BufferSecurityCheck>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -94,7 +96,6 @@
     <ClInclude Include="XmlRpcServerMethod.h" />
     <ClInclude Include="XmlRpcServerMethodWrapper.h" />
     <ClInclude Include="XmlRpcSocket.h" />
-    <ClInclude Include="XmlRpcSource.h" />
     <ClInclude Include="XmlRpcUtil.h" />
     <ClInclude Include="XmlRpcValue.h" />
     <ClInclude Include="Callers.h" />
