I AM THE MANAGER OF UNMANAGED POINTERS. YOUR GREAT GRANDCHILDREN WILL TELL STORIES OF MY CONQUESTS!!!

--- a/ROS#/XmlRpcWin32/XmlRpcWin32.vcxproj
+++ b/ROS#/XmlRpcWin32/XmlRpcWin32.vcxproj
@@ -63,7 +63,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>"$(VSInstallDir)VC\bin\dumpbin.exe" /EXPORTS "$(TargetPath)"</Command>
+      <Command>"$(VSInstallDir)VC\bin\dumpbin.exe" /EXPORTS "$(ProjectDir)..\XmlRpc_Wrapper\XmlRpcWin32.dll"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
