I think I may have just returned a valid BusInfo!

--- a/ROS#/XmlRpcWin32/XmlRpcWin32.vcxproj
+++ b/ROS#/XmlRpcWin32/XmlRpcWin32.vcxproj
@@ -57,6 +57,7 @@
       <ExceptionHandling>Async</ExceptionHandling>
       <MinimalRebuild>false</MinimalRebuild>
       <BufferSecurityCheck>false</BufferSecurityCheck>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
