AND ON THE 8th DAY, ERIC SAID LET THEIR BE POINTERS... AND THERE WERE POINTERS.

--- a/ROS#/XmlRpcWin32/XmlRpcWin32.vcxproj
+++ b/ROS#/XmlRpcWin32/XmlRpcWin32.vcxproj
@@ -58,6 +58,8 @@
       <MinimalRebuild>false</MinimalRebuild>
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <BasicRuntimeChecks>Default</BasicRuntimeChecks>
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
