have publications sorta working... call's ProcessPublications with things getting put in the queue periodically, but not sure where they're going. O.o.
About to make YAMLParser parse SRV files, generate appropriate service-related classes/structs, and hopefully get services working for GetLogger() and that sort of call from master

--- a/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
+++ b/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Publication.cs" />
     <Compile Include="Publisher.cs" />
     <Compile Include="PublisherLink.cs" />
+    <Compile Include="RosOutAppender.cs" />
     <Compile Include="ServiceClient.cs" />
     <Compile Include="ServiceClientOptions.cs" />
     <Compile Include="ServiceManager.cs" />
