--- a/ROS#/YAMLParser/YAMLParser.csproj
+++ b/ROS#/YAMLParser/YAMLParser.csproj
@@ -47,9 +47,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MessageTypes.cs" />
-    <Compile Include="TemplateProject\SerializationHelper.cs">
+    <Content Include="TemplateProject\SerializationHelper.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
+    </Content>
     <Content Include="TemplateProject\PlaceHolder._cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -252,6 +252,13 @@
     <Content Include="ROS_MESSAGES\std_msgs\ConnectionHeader.msg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="ROS_MESSAGES\rosgraph_msgs\Log.msg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="ROS_MESSAGES\roscsharp\Logger.msg" />
+    <None Include="ROS_MESSAGES\roscsharp\Empty.srv" />
+    <None Include="ROS_MESSAGES\roscsharp\SetLoggerLevel.srv" />
+    <None Include="ROS_MESSAGES\roscsharp\GetLoggers.srv" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
