--- a/ROS#/Messages/Messages.csproj
+++ b/ROS#/Messages/Messages.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+	<Compile Include="custom_msgs\arraytest.cs" />
 	<Compile Include="geometry_msgs\Point.cs" />
 	<Compile Include="geometry_msgs\Point32.cs" />
 	<Compile Include="geometry_msgs\PointStamped.cs" />
@@ -103,7 +104,6 @@
 	<Compile Include="std_msgs\UInt64MultiArray.cs" />
 	<Compile Include="std_msgs\UInt8.cs" />
 	<Compile Include="std_msgs\UInt8MultiArray.cs" />
-	<Compile Include="DummyMsgThing.cs" />
 	<Compile Include="SerializationHelper.cs" />
 	<Compile Include="MessageTypes.cs" />
   </ItemGroup>
