--- a/ROS#/YAMLParser/YAMLParser.csproj
+++ b/ROS#/YAMLParser/YAMLParser.csproj
@@ -248,7 +248,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="DummyMsgThing.msg">
+    <None Include="ROS_MESSAGES\custom_msgs\arraytest.msg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Content Include="ROS_MESSAGES\std_msgs\ConnectionHeader.msg">
