UNBROKE single strings, while changing message types so string messages aren't just "string"s when they're subtypes of a message... made them be the Ros# special class thing

--- a/ROS#/YAMLParser/YAMLParser.csproj
+++ b/ROS#/YAMLParser/YAMLParser.csproj
@@ -51,6 +51,7 @@
     <Compile Include="TemplateProject\SerializationHelper.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="TemplateProject\String.cs" />
     <Content Include="TemplateProject\PlaceHolder._cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
