--- a/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
+++ b/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
@@ -90,13 +90,13 @@
     <Compile Include="_Init.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Messages\Messages.csproj">
+      <Project>{94C4DF5B-1566-4ACC-9BD3-167AAC83F9FD}</Project>
+      <Name>Messages</Name>
+    </ProjectReference>
     <ProjectReference Include="..\XmlRpc_Wrapper\XmlRpc_Wrapper.csproj">
       <Project>{8B7DB66C-9C03-4078-9276-B6A760CD4C2C}</Project>
       <Name>XmlRpc_Wrapper</Name>
-    </ProjectReference>
-    <ProjectReference Include="C:\GitLocal\uml-ros\Frontend\ROS#\Messages\Messages.csproj">
-      <Project>{94C4DF5B-1566-4ACC-9BD3-167AAC83F9FD}</Project>
-      <Name>Messages</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
