--- a/ROS#/Tester/Tester.csproj
+++ b/ROS#/Tester/Tester.csproj
@@ -54,13 +54,13 @@
       <Project>{586A3B66-104A-4182-82C2-88DC120F10AC}</Project>
       <Name>EricIsAMAZING</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Messages\Messages.csproj">
+      <Project>{94C4DF5B-1566-4ACC-9BD3-167AAC83F9FD}</Project>
+      <Name>Messages</Name>
+    </ProjectReference>
     <ProjectReference Include="..\XmlRpc_Wrapper\XmlRpc_Wrapper.csproj">
       <Project>{8B7DB66C-9C03-4078-9276-B6A760CD4C2C}</Project>
       <Name>XmlRpc_Wrapper</Name>
-    </ProjectReference>
-    <ProjectReference Include="C:\GitLocal\uml-ros\Frontend\ROS#\Messages\Messages.csproj">
-      <Project>{94C4DF5B-1566-4ACC-9BD3-167AAC83F9FD}</Project>
-      <Name>Messages</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
