went from 0% subscription functionality to 75% this fternoon... just need to get deserialization working as well as serialization, and de-obfuscate the subscription_queue cluster-f***

--- a/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
+++ b/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ServiceServer.cs" />
     <Compile Include="ServiceServerLink.cs" />
     <Compile Include="SingleSubscriberPublisher.cs" />
+    <Compile Include="Socket.cs" />
     <Compile Include="Spinner.cs" />
     <Compile Include="SubscribeOptions.cs" />
     <Compile Include="Subscriber.cs" />
