--- a/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
+++ b/ROS#/EricIsAMAZING/EricIsAMAZING.csproj
@@ -78,6 +78,7 @@
     <Compile Include="SubscriberLink.cs" />
     <Compile Include="Subscription.cs" />
     <Compile Include="SubscriptionCallbackHelper.cs" />
+    <Compile Include="SubscriptionQueue.cs" />
     <Compile Include="TcpTransport.cs" />
     <Compile Include="this_node.cs" />
     <Compile Include="TimerManager.cs" />
