--- a/ROS#/Messages/Messages.csproj
+++ b/ROS#/Messages/Messages.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
 	<Compile Include="custom_msgs\arraytest.cs" />
+	<Compile Include="custom_msgs\simpleintarray.cs" />
 	<Compile Include="geometry_msgs\Point.cs" />
 	<Compile Include="geometry_msgs\Point32.cs" />
 	<Compile Include="geometry_msgs\PointStamped.cs" />
