can handle a message composed of:
     int32[2] integers
     int32[] lengthlessintegers
     string teststring
     string[2] teststringarray
     string[] teststringarraylengthless

but can't handle a message composed of 2 of those messages... doesn't ever get to the point of deserializing them, even though the md5sums match O.o

--- a/ROS#/YAMLParser/YAMLParser.csproj
+++ b/ROS#/YAMLParser/YAMLParser.csproj
@@ -261,6 +261,9 @@
     <Content Include="ROS_MESSAGES\custom_msgs\simpleintarray.msg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="ROS_MESSAGES\custom_msgs\arraytestsquared.msg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="ROS_MESSAGES\roscsharp\Logger.msg" />
     <None Include="ROS_MESSAGES\roscsharp\Empty.srv" />
     <None Include="ROS_MESSAGES\roscsharp\SetLoggerLevel.srv" />
