--- a/ROS#/YAMLParser/YAMLParser.csproj
+++ b/ROS#/YAMLParser/YAMLParser.csproj
@@ -291,6 +291,15 @@
     <Content Include="ROS_MESSAGES\std_msgs\UInt8MultiArray.msg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="ROS_MESSAGES\histogram_msgs\histogramsnapshot.msg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ROS_MESSAGES\rosgraph_msgs\Clock.msg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ROS_MESSAGES\histogram_msgs\MCLSnapshot.msg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="ROS_MESSAGES\sensor_msgs\Image.msg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
