--- a/Messages/Messages.csproj
+++ b/Messages/Messages.csproj
@@ -111,9 +111,9 @@
 	<Compile Include="std_msgs\UInt64MultiArray.cs" />
 	<Compile Include="std_msgs\UInt8.cs" />
 	<Compile Include="std_msgs\UInt8MultiArray.cs" />
-	<Compile Include="roscsharp\Empty.cs" />
 	<Compile Include="roscsharp\GetLoggers.cs" />
 	<Compile Include="roscsharp\SetLoggerLevel.cs" />
+	<Compile Include="std_srvs\Empty.cs" />
 	<Compile Include="SerializationHelper.cs" />
 	<Compile Include="MessageTypes.cs" />
   </ItemGroup>
