Mapcontrol has bindings set, map resolution fixed but static.

--- a/EricIsAMAZING/ROS_C-Sharp.csproj
+++ b/EricIsAMAZING/ROS_C-Sharp.csproj
@@ -84,6 +84,7 @@
     <Compile Include="SubscriptionCallbackHelper.cs" />
     <Compile Include="SubscriptionQueue.cs" />
     <Compile Include="TcpTransport.cs" />
+    <Compile Include="tf_node.cs" />
     <Compile Include="this_node.cs" />
     <Compile Include="TimerManager.cs" />
     <Compile Include="TopicInfo.cs" />
