Added support for changing topic names that are subscribed to and published to on the fly. Also adjusted waypoint success criteria.

--- a/XmlRpcWin32/XmlRpcWin32.vcxproj
+++ b/XmlRpcWin32/XmlRpcWin32.vcxproj
@@ -64,6 +64,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <Profile>true</Profile>
     </Link>
     <PostBuildEvent>
       <Command>"$(VSInstallDir)VC\bin\dumpbin.exe" /EXPORTS "$(TargetPath)"</Command>
