--- a/SecondPass/SecondPass.csproj
+++ b/SecondPass/SecondPass.csproj
@@ -53,17 +53,14 @@
       <Project>{586A3B66-104A-4182-82C2-88DC120F10AC}</Project>
       <Name>ROS_C-Sharp</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TempMessages\TempMessages.csproj">
-      <Project>{41ACBB34-31D0-4E0A-8DC0-E09C3B8E0F3C}</Project>
-      <Name>TempMessages</Name>
+    <ProjectReference Include="..\Messages\Messages.csproj">
+      <Project>{94C4DF5B-1566-4ACC-9BD3-167AAC83F9FD}</Project>
+      <Name>Messages</Name>
     </ProjectReference>
     <ProjectReference Include="..\XmlRpc_Wrapper\XmlRpc_Wrapper.csproj">
       <Project>{8B7DB66C-9C03-4078-9276-B6A760CD4C2C}</Project>
       <Name>XmlRpc_Wrapper</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
